--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -2,45 +2,59 @@
   <h2>Contact Us</h2>
   <p>Fill out the following form and a relevant person from Stobart will respond to you as soon as possible.</p>
 
-  <form class="contact-form">
+  <form class="contact-form" [formGroup]="contactForm" (ngSubmit)="onSubmit()">
     <div class="form-group">
       <label for="fullName">Name/Company Name*</label>
-      <input type="text" id="fullName" name="fullName" required>
+      <input type="text" id="fullName" formControlName="fullName">
     </div>
 
     <div class="form-group">
       <label for="email">Email*</label>
-      <input type="email" id="email" name="email" required>
+      <input type="email" id="email" formControlName="email">
     </div>
 
     <div class="form-group">
       <label for="phone">Phone Number*</label>
-      <input type="tel" id="phone" name="phone" required>
+      <input type="tel" id="phone" formControlName="phone">
     </div>
 
     <div class="form-group">
       <label for="pickupAddress">Pick-up Address*</label>
-      <input type="text" id="pickupAddress" name="pickupAddress" required #pickupAddressInput>
+      <input type="text" id="pickupAddress" formControlName="pickupAddress" #pickupAddressInput>
     </div>
 
     <div class="form-group">
       <label for="dropoffAddress">Drop-off Address*</label>
-      <input type="text" id="dropoffAddress" name="dropoffAddress" required #dropoffAddressInput>
+      <input type="text" id="dropoffAddress" formControlName="dropoffAddress" #dropoffAddressInput>
     </div>
 
-    <div class="form-group">
-      <label for="collectionTime">Date and Time of Collection*</label>
-      <input type="datetime-local" id="collectionTime" name="collectionTime" required>
+    <div class="form-row">
+      <div class="form-group">
+        <label for="collectionDate">Collection Date*</label>
+        <input type="date" id="collectionDate" formControlName="collectionDate">
+      </div>
+
+      <div class="form-group">
+        <label for="collectionTime">Collection Time*</label>
+        <input type="time" id="collectionTime" formControlName="collectionTime">
+      </div>
     </div>
 
-    <div class="form-group">
-      <label for="dropoffTime">Date and Time of Drop-off*</label>
-      <input type="datetime-local" id="dropoffTime" name="dropoffTime" required>
+    <div class="form-row">
+      <div class="form-group">
+        <label for="dropoffDate">Drop-off Date*</label>
+        <input type="date" id="dropoffDate" formControlName="dropoffDate">
+      </div>
+
+      <div class="form-group">
+        <label for="dropoffTime">Drop-off Time*</label>
+        <input type="time" id="dropoffTime" formControlName="dropoffTime">
+      </div>
     </div>
 
     <div class="form-group">
       <label for="enquiryType">Enquiry Type*</label>
-      <select id="enquiryType" name="enquiryType" required>
+      <select id="enquiryType" formControlName="enquiryType">
         <option value="swb">Small Wheel Base</option>
         <option value="mwb">Medium Wheel Base</option>
         <option value="lwb">Large Wheel Base</option>
@@ -50,7 +64,7 @@
       </select>
     </div>
 
-    <button type="submit">Submit</button>
+    <button type="submit" [disabled]="contactForm.invalid">Submit</button>
 
     <div class="privacy-notice">
       <p>By clicking submit, you agree to our <a routerLink="/privacy-policy">Privacy Policy</a>.</p>
