Updated header and contact

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,5 +1,5 @@
 <div class="contact-container">
-  <h2>Contact Us</h2>
+  <h2>Instant Quote</h2>
   <p>Fill out the following form and a relevant person from Stobart will respond to you as soon as possible.</p>
 
   <form class="contact-form" [formGroup]="contactForm" (ngSubmit)="onSubmit()">
