--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,6 +2,8 @@
   <div class="container">
     <img src="assets/images/Logo.png" alt="Stobart Logo" class="logo">
 
+    <h2>07576 068 987 <br> bookings&#64;stobart-transport.co.uk</h2>
+
     <button class="menu-toggle" (click)="toggleMenu()">
       &#9776; </button>
 
