--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -3,53 +3,73 @@
   <p>Fill out the following form and a relevant person from Stobart will respond to you as soon as possible.</p>
 
   <form class="contact-form" [formGroup]="contactForm" (ngSubmit)="onSubmit()">
+
     <div class="form-group">
       <label for="fullName">Name/Company Name*</label>
-      <input type="text" id="fullName" formControlName="fullName">
+      <input type="text" id="fullName" formControlName="fullName" placeholder="e.g., John Smith or Acme Ltd." [ngClass]="{ 'is-invalid': f['fullName'].invalid && f['fullName'].touched }">
+      <div *ngIf="f['fullName'].invalid && f['fullName'].touched" class="error-message">
+        <div *ngIf="f['fullName'].errors?.['required']">Name is required.</div>
+        <div *ngIf="f['fullName'].errors?.['minlength']">Name must be at least 2 characters long.</div>
+      </div>
     </div>
 
     <div class="form-group">
       <label for="email">Email*</label>
-      <input type="email" id="email" formControlName="email">
+      <input type="email" id="email" formControlName="email" placeholder="e.g., john.smith@example.com" [ngClass]="{ 'is-invalid': f['email'].invalid && f['email'].touched }">
+       <div *ngIf="f['email'].invalid && f['email'].touched" class="error-message">
+        <div *ngIf="f['email'].errors?.['required']">Email is required.</div>
+        <div *ngIf="f['email'].errors?.['email']">Please enter a valid email address.</div>
+      </div>
     </div>
 
     <div class="form-group">
       <label for="phone">Phone Number*</label>
-      <input type="tel" id="phone" formControlName="phone">
+      <input type="tel" id="phone" formControlName="phone" placeholder="e.g., 07123 456789" [ngClass]="{ 'is-invalid': f['phone'].invalid && f['phone'].touched }">
+       <div *ngIf="f['phone'].invalid && f['phone'].touched" class="error-message">
+        <div *ngIf="f['phone'].errors?.['required']">Phone number is required.</div>
+        <div *ngIf="f['phone'].errors?.['pattern']">Please enter a valid phone number.</div>
+      </div>
     </div>
 
     <div class="form-group">
       <label for="pickupAddress">Pick-up Address*</label>
-      <input type="text" id="pickupAddress" formControlName="pickupAddress" #pickupAddressInput>
+      <input type="text" id="pickupAddress" formControlName="pickupAddress" #pickupAddressInput placeholder="Start typing your address..." [ngClass]="{ 'is-invalid': f['pickupAddress'].invalid && f['pickupAddress'].touched }">
+      <div *ngIf="f['pickupAddress'].invalid && f['pickupAddress'].touched" class="error-message">
+        Address is required.
+      </div>
     </div>
 
     <div class="form-group">
       <label for="dropoffAddress">Drop-off Address*</label>
-      <input type="text" id="dropoffAddress" formControlName="dropoffAddress" #dropoffAddressInput>
+      <input type="text" id="dropoffAddress" formControlName="dropoffAddress" #dropoffAddressInput placeholder="Start typing your address..." [ngClass]="{ 'is-invalid': f['dropoffAddress'].invalid && f['dropoffAddress'].touched }">
+       <div *ngIf="f['dropoffAddress'].invalid && f['dropoffAddress'].touched" class="error-message">
+        Address is required.
+      </div>
     </div>
 
     <div class="form-row">
       <div class="form-group">
         <label for="collectionDate">Collection Date*</label>
-        <input type="date" id="collectionDate" formControlName="collectionDate">
+        <input type="date" id="collectionDate" formControlName="collectionDate" [ngClass]="{ 'is-invalid': f['collectionDate'].invalid && f['collectionDate'].touched }">
       </div>
-
       <div class="form-group">
         <label for="collectionTime">Collection Time*</label>
-        <input type="time" id="collectionTime" formControlName="collectionTime">
+        <input type="time" id="collectionTime" formControlName="collectionTime" [ngClass]="{ 'is-invalid': f['collectionTime'].invalid && f['collectionTime'].touched }">
       </div>
     </div>
 
     <div class="form-row">
       <div class="form-group">
         <label for="dropoffDate">Drop-off Date*</label>
-        <input type="date" id="dropoffDate" formControlName="dropoffDate">
+        <input type="date" id="dropoffDate" formControlName="dropoffDate" [ngClass]="{ 'is-invalid': f['dropoffDate'].invalid && f['dropoffDate'].touched }">
       </div>
-
       <div class="form-group">
         <label for="dropoffTime">Drop-off Time*</label>
-        <input type="time" id="dropoffTime" formControlName="dropoffTime">
+        <input type="time" id="dropoffTime" formControlName="dropoffTime" [ngClass]="{ 'is-invalid': f['dropoffTime'].invalid && f['dropoffTime'].touched }">
       </div>
+    </div>
+    <div *ngIf="contactForm.errors?.['dateOrder'] && (f['collectionDate'].touched || f['dropoffDate'].touched)" class="error-message form-error">
+        Drop-off date must be after the collection date.
     </div>
 
     <div class="form-group">
@@ -64,7 +84,7 @@
       </select>
     </div>
 
-    <button type="submit" [disabled]="contactForm.invalid">Submit</button>
+    <button type="submit">Get Quote</button>
 
     <div class="privacy-notice">
       <p>By clicking submit, you agree to our <a routerLink="/privacy-policy">Privacy Policy</a>.</p>
